# DDNet-Manager

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/: 2026-06-07-ddnet-manager-0.1.0-release-checklist.md
docs/米哈游启动器/: README.md  metadata.json
scripts/: check_lint.sh  tauri_update_smoke.ps1
src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cfg.rs  client_catalog.rs  client_scan.rs  commands.rs  ddnet_source.rs  download.rs  file_tx.rs  github_release.rs  local_smoke.rs  main.rs  manifest.rs  models.rs  network_route.rs  process.rs  registry.rs  update_source.rs  version.rs  workshop.rs
src-tauri/src/client_scan/: tests.rs
src-tauri/src/commands/: tests.rs
src-tauri/src/download/: tests.rs
src-tauri/src/manifest/: tests.rs
src-tauri/src/test/: cfg.rs  client_scan.rs  commands.rs  ddnet_source.rs  download.rs  file_tx.rs  github_release.rs  manifest.rs  models.rs  network_route.rs  process.rs  registry.rs  update_source.rs  version.rs  workshop.rs
src-tauri/src/test/fixtures/update-smoke/: manifest.json
src-tauri/src/test/fixtures/update-smoke/package-root/QmClient/: storage.cfg
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/hooks/: useAppSettings.test.tsx  useAppSettings.ts  useAutoUpdate.test.tsx  useAutoUpdate.ts  useClientLauncher.test.tsx  (+1 more)
(+63 files in other folders)
