[package]
name = "ddnet-manager"
version = "0.1.0"
description = "Industrial neon-clean third-party launcher for DDNet."
authors = ["DDNet Manager Team"]
edition = "2021"
license = "MIT"
repository = ""
default-run = "ddnet-manager"
build = "build.rs"

[package.metadata.tauri.bundle]
identifier = "com.ddnet.manager"

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
dirs = "6.0.0"
sha2 = "0.10.9"
rusqlite = { version = "0.37.0", features = ["bundled"] }
time = { version = "0.3.44", features = ["formatting"] }
zip = "6.0.0"
sysinfo = "0.39.3"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dev-dependencies]
tempfile = "3.23.0"
